--- a/couple-web-vite/.env
+++ b/couple-web-vite/.env
@@ -1,2 +1,3 @@
 VITE_SUPABASE_URL=https://your-project-id.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key
+VITE_VAPID_PUBLIC_KEY=BF4-zZH00yUtIbZVK4Uyxxgvq3lDQcAMQIDrJoZunTkBMw3--HNPAlczfJurLpnSkUnGbhb72B2y1yDe25_MAUs
